[lworld] Empty inline types break calling convention optimization

XMLWordPrintable

      # Internal Error (/oracle/valhalla_int/open/src/hotspot/share/runtime/signature.cpp:648), pid=31901, tid=31913
      # assert(bt == T_VOID || type2wfield[bt] == type2wfield[(*sig)._bt]) failed: inconsistent signature

      Stack: [0x00007fa4c0118000,0x00007fa4c0219000], sp=0x00007fa4c0216050, free space=1016k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x161bc8a] SigEntry::next_is_reserved(GrowableArrayFilterIterator<SigEntry, SigEntryFilter>&, BasicType&, bool)+0x1ca
      V [libjvm.so+0x17cc4de] TypeTuple::make_domain(ciMethod*, bool) [clone .constprop.0]+0x3ce
      V [libjvm.so+0x17cd00b] TypeFunc::make(ciMethod*, bool)+0x40b
      V [libjvm.so+0x946177] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xb97
      V [libjvm.so+0x77ea25] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x175
      V [libjvm.so+0x956050] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd60
      V [libjvm.so+0x956e18] CompileBroker::compiler_thread_loop()+0x6b8
      V [libjvm.so+0x17886dc] JavaThread::thread_main_inner()+0x21c
      V [libjvm.so+0x178e4a0] Thread::call_run()+0x100
      V [libjvm.so+0x146be96] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: