8247923: [lworld] Empty inline types break calling convention optimization